<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:focusable="true"
                                                   android:focusableInTouchMode="true"
                                                   android:padding="16dp"
                                                   tools:context=".ui.player.PlayerFragment">


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_name_hint"
                android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_purchase_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/input_layout_name"
            app:layout_constraintStart_toStartOf="@id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_purchase_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_purchase_price_hint"
                android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_purchase_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/input_layout_purchase_price"
            app:layout_constraintStart_toStartOf="@id/input_layout_purchase_price"
            app:layout_constraintTop_toBottomOf="@id/input_layout_purchase_price">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_purchase_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_purchase_date_hint"
                android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_sell_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/input_layout_purchase_date"
            app:layout_constraintStart_toStartOf="@id/input_layout_purchase_date"
            app:layout_constraintTop_toBottomOf="@id/input_layout_purchase_date">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sell_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_sell_price_hint"
                android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_sell_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/input_layout_sell_price"
            app:layout_constraintStart_toStartOf="@id/input_layout_sell_price"
            app:layout_constraintTop_toBottomOf="@id/input_layout_sell_price">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_sell_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_sell_date_hint"
                android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_add_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/insert_player_button"
            app:layout_constraintEnd_toEndOf="@id/input_layout_sell_date"
            app:layout_constraintStart_toStartOf="@id/input_layout_sell_date"
            app:layout_constraintTop_toBottomOf="@id/input_layout_sell_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>